2008-05-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (free_string_list): New helper function.
	(Connection_printFiles): New method.
	Patch from Fabian Knittel.

	* cupsconnection.c (Connection_printFile): New method.  Patch from
	Fabian Knittel.

2008-04-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Test for existence
	of testprint.ps before performing operation, and look around for
	it if necessary.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.38.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDocument): Fixed missing
	argument to snprintf.

2008-04-01  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Allow destination to be a
	file descriptor or a Python file object, and call cupsGetFd() in
	those cases.

2008-03-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.37.

2008-03-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Prevent
	memory leak.
	(Connection_getNotifications): Likewise.
	(Dest_getOptions): Likewise.

2008-03-14  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Add CUPS_PRINTER_DISCOVERED constant.

2008-03-12  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_authenticateJob): New method.

2008-03-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile (PYTHONVERS): Removed.

2008-03-05  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* cupsppd.c (getline): emulate getline() for systems without it.
	  (PPD_writeFd): replace strndup with calloc/strncpy for portability.
	* cupsconnection.c (Connection_getDocument): generate tempfile template
	with snprintf instead of alloc, copy, copy.
	(Connection_addPrinter): generate tempfile template with snprintf
	instead of strpcpy, strcpy.
	(PyObject_to_String): avoid using alloca() by declaring a buffer at
	the top of the function.
	(Connection_getServerPPD): test for CUPS version using cups.h supplied
	values.