@@ -1,3 +1,9 @@
+2008-05-29  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_authenticateJob): Allow auth
+	parameter to be optional in order to allow for Kerberos
+	authentication.
+
 2008-05-27  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (free_string_list): New helper function.
